--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,27 @@
 version: '3.8'
 
 services:
-  api:
-    build:
-      context: . 
-    container_name: api
-    environment:
-      GYM_API__DB__HOST: localhost
-      GYM_API__DB__PORT: 5433
-      GYM_API__DB__LOGIN: ${DB_LOGIN}
-      GYM_API__DB__PASSWORD: ${DB_PASSWORD}
-      GYM_API__DB__DATABASE: gym
-    ports:
-      - target: 8000
-        published: ${PORT}
-    volumes:
-      - ./gym_api:/app/gym_api
-    command:
-      - /bin/bash
-      - -c
-      - | 
-        python -m uvicorn "gym_api.main:app" "--host" "0.0.0.0"
-        # tail -f /dev/null
+  # api:
+  #   build:
+  #     context: . 
+  #   container_name: api
+  #   environment:
+  #     GYM_API__DB__HOST: localhost
+  #     GYM_API__DB__PORT: 5433
+  #     GYM_API__DB__LOGIN: ${DB_LOGIN}
+  #     GYM_API__DB__PASSWORD: ${DB_PASSWORD}
+  #     GYM_API__DB__DATABASE: gym
+  #   ports:
+  #     - target: 8000
+  #       published: ${PORT}
+  #   volumes:
+  #     - ./gym_api:/app/gym_api
+  #   command:
+  #     - /bin/bash
+  #     - -c
+  #     - | 
+  #       python -m uvicorn "gym_api.main:app" "--host" "0.0.0.0"
+  #       # tail -f /dev/null
   db:
     image: postgres:latest
     environment:
@@ -31,7 +31,7 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - ./db_data:/var/lib/postgresql/data
 
   redis:
     image: redis:latest
